Create-company and user Authentication are completed

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "devextreme": "23.2.6",
     "devextreme-react": "23.2.6",
+    "dotenv": "^16.4.5",
+    "html-to-image": "^1.11.11",
     "react": "^18.3.1",
     "react-app-polyfill": "^1.0.0",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
