--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-REACT_APP_API=https://aawjo.vercel.app/
+# REACT_APP_API=https://aawjo.vercel.app/
+# REACT_APP_API=http://127.0.0.1:8000/
+REACT_APP_API=http://192.168.1.98:8000/
+# REACT_APP_WSS_URL=ws://127.0.0.1:8000/ws/path/
+REACT_APP_WSS_URL=ws://192.168.1.98:8000/ws/path/
+# REACT_APP_WSS_URL=ws://aawjo.vercel.app/ws/path/
