--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "eventemitter3": "^5.0.1",
     "html-to-image": "^1.11.11",
+    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-app-polyfill": "^1.0.0",
     "react-dom": "^18.3.1",
